<resources>
    <string name="app_name">vendimia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabSales">Ventas</string>
    <string name="clientTab">Clientes</string>
    <string name="articleTab">Articulos</string>
    <string name="configTab">Configuración</string>
    <string name="open_nav_drawer">Open Drawer</string>
    <string name="close_nav_drawer">Close Drawer</string>
    <string name="folio">Folio:</string>
    <string name="client_number">Clave Cliente:</string>
    <string name="date">Fecha:</string>
    <string name="name">Nombre</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="Modelo">Modelo</string>
</resources>
