<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/groupSup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/salesItem"
            android:title="@string/tabSales"
            android:icon="@drawable/ic_local_offer"
            />
        <item
            android:id="@+id/clientsItem"
            android:title="@string/clientTab"
            android:icon="@drawable/ic_clients"
            />
        <item
            android:id="@+id/articlesItem"
            android:title="@string/articleTab"
            android:icon="@drawable/ic_clients"
            />
        <item
            android:id="@+id/configItem"
            android:title="@string/configTab"
            android:icon="@drawable/ic_settings"
            />
    </group>
</menu>