<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/general_padding"
        >
        <TextView
            android:id="@+id/rv_folio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folio"
            android:layout_marginEnd="80dp"
            />
        <TextView
            android:id="@+id/rv_cclient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_number"
            android:layout_marginEnd="90dp"
            />
        <TextView
            android:id="@+id/rv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginEnd="80dp"
            />
        <TextView
            android:id="@+id/rv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginEnd="90dp"
            />
        <TextView
            android:id="@+id/rv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            />
    </LinearLayout>

</LinearLayout>